Source/WebCore/dom/Exception.h
@@ -33,7 +33,7 @@ namespace WebCore {
 
 class Exception {
 public:
-    explicit Exception(ExceptionCode, String&& = { });
+    explicit Exception(ExceptionCode, String = { });
 
     ExceptionCode code() const { return m_code; }
     const String& message() const { return m_message; }
@@ -51,9 +51,9 @@ private:
 
 Exception isolatedCopy(Exception&&);
 
-inline Exception::Exception(ExceptionCode code, String&& message)
-    : m_code(code)
-    , m_message(WTFMove(message))
+inline Exception::Exception(ExceptionCode code, String message)
+    : m_code { code }
+    , m_message { WTFMove(message) }
 {
 }
 
